kubernetes-on-premises/chapters/ch01/workload/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  selector:
    matchLabels: {app: web}
  template:
    metadata:
      labels: {app: web}
    spec:
      containers:
        - name: web
          image: ghcr.io/meridian/web:1.9
        - name: db
          image: docker.io/library/postgres:16.4
